# linkedin_jobs_search_helper

./: .env.example  .gitignore  app_config.template.yaml  components.py  docker-compose.yml  elements_paths.py  job_url_builder.py  linkedin_bot_schema.json  logger.py  main.py  messaging.py  openai_api.py  pyproject.toml
ai_intents/: README.md  etl_1.md
collected_jobs/2026-04-27/: execution#1.txt  execution#2.json  execution#23.txt
collected_jobs/2026-04-28/: execution#0.json  execution#1.json  execution#2.json  execution#3.json
docker/init/mongo/: 001_external_jobs_user.js
domain/: command.py  criteria.py  notificator.py  notifier.py
domain/criteria/: criteria.py  job_discard_oai_criteria.py  relevant_job_OAI_criteria.py
domain/linkedin_discard_job_command/: command.py
domain/persist_data_command/: command.py
etl/collected_jobs_ingestion/: __init__.py  __main__.py  collected_jobs_parser.py  ingest_collected_jobs.py  models.py  mongo_repository.py  normalizer.py
etl/collected_jobs_transformation/: __init__.py  __main__.py  add_description_language.py
etl/language_detection/: language_detector.py
infraestracture/notifications/: fake_notificator_message_executor.py  fs.py
infraestracture/persistance/: file_persistance.py
logs/: .gitignore
scanners/: actions.py  linkedin.py  utilities.py
src/linkedin_jobs_search_helper/: components.py  elements_paths.py  logger.py  main.py  settings.py
src/linkedin_jobs_search_helper/common/: logger.py  openai_api.py  openai_batch_client.py
tests/: conftest.py  test_order_by_relevance_with_gpt4.py
tests/common/: test_openai_batch_client.py
tests/etl/: test_collected_jobs_ingestion.py  test_collected_jobs_transformation.py  test_create_batch.py  test_language_detection.py  test_mongo_repository_integration.py  test_posting_metadata_transformation.py
tests/fixtures/: gpt_fails_on_detecting_language.txt  gpt_fails_saying_an_extra_visa_is_needed.txt  gpt_says_python_not_irrelevant_but_never_mentioned.txt  gpt_says_yes_to_other_visa_permit_than_EU_but_not_reason.txt  preferred_skills_are_not_python_but_not_mandatory.txt  remote_ambigous_if_worldwide_and_python.txt  senior_backed_remote_non_python.txt  senior_backed_remote_non_python2.txt
tests/jobs/: test_persist_data_command.py  test_selenium_receiver.py
tests/test_datasets/: execution#0.json  linkedin_raw_extra_data_2026-05-02.jsonl
transform_jobs/add_language/: __main__.py  add_description_language.py  conf.py
transform_jobs/language_detection/: language_detector.py
(+64 files in other folders)
