[tool.poetry]
name = "linkedin_job_apply_helper"
version = "0.1.0"
description = ""
authors = ["Strong Punch Xavier"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.9.0"
webdriver-manager = "3.8.6"
plum-dispatch = "^2.1.1"
pyyaml = "^6.0"
tiktoken = "^0.4.0"
regex = "^2023.6.3"
pydantic = "^2.0.3"
openai = "^0.27.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

