[tool.poetry]
name = "linkedin_jobs_search_helper"
version = "0.1.0"
description = ""
authors = ["Strong Punch Xavier"]
packages = [{ include = "linkedin_jobs_search_helper", from = "src" }]

[tool.poetry.scripts]
in-scan = "linkedin_jobs_search_helper.jobs.extract.scanners.linkedin.main:main"
add-posting-metadata = "linkedin_jobs_search_helper.jobs.transform_jobs.add_posting_metadata.__main__:main"
create-batch = "linkedin_jobs_search_helper.jobs.transform_jobs.create_batch.__main__:main"
canonical-pipeline = "linkedin_jobs_search_helper.jobs.transform_jobs.pipelines.canonical.__main__:main"
download-job-evaluations-batch = "linkedin_jobs_search_helper.jobs.extract.job_evaluations.openai_batch:entrypoint"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.9.0"
webdriver-manager = ">=4.0.2"
plum-dispatch = "^2.1.1"
pyyaml = "^6.0"
tiktoken = "^0.4.0"
regex = "^2023.6.3"
pydantic = "2.4.0"
openai = ">=2.0.0,<3.0.0"
python-dotenv = "^1.2.2"
colorlog = "^6.7.0"
langid = "^1.1.6"
pymongo = "^4.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = ["docker/mongo/data"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
